# pinoccio-cu

./: Cargo.toml  README.md
program/: Cargo.toml
program/src/: account_check.rs  cpi.rs  entrypoint.rs  errors.rs  lib.rs  nostd_entrypoint.rs
program/tests/: test.rs
