[workspace]
resolver = "2"
members = ["program"]

[workspace.metadata.cli]
solana = "2.1.0"

[workspace.metadata.toolchains]
format = "nightly-2024-08-08"
lint = "nightly-2024-08-08"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ananas-block/pinocchio-experiment"

[workspace.dependencies]
pinocchio = { version = "0.7"}
pinocchio-log = { version = "0.3" }
pinocchio-pubkey = { version = "0.2" }
