[package]
name = "test-program"
version = "0.1.0"
edition = { workspace = true }
readme = "./README.md"
license = { workspace = true }
repository = { workspace = true }
publish = false


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["pinocchio"]
logging = []
test-sbf = []
solana-program = []
pinocchio = []
nostd = []

[dependencies]
pinocchio = { workspace = true }
pinocchio-log = { workspace = true }
thiserror = "2.0.11"
solana-program = "~1.18"
solana-nostd-entrypoint = "0.6.2"

[dev-dependencies]
solana-program-test = "~1.18"
solana-sdk = "~1.18"
rand = "0.8.4"
